final/challenges/chall-xor-otp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-2021-chall-xor-otp-deployment
  namespace: challs
  labels:
    ctfd.chall.deployment: ctfd-2021-chall-xor-otp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      ctfd.chall.pod: ctfd-2021-xor-otp-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        ctfd.chall.pod: ctfd-2021-xor-otp-pod
    spec:
      containers:
      - image: doombringerazurai/chall-xor-otp:1.0
        name: chall-xor-otp
        ports:
        - containerPort: 47400
        resources:
          requests:
            cpu: "30m"
          limits:
            cpu: "100m"
        livenessProbe:
              tcpSocket:
                port: 8080
              initialDelaySeconds: 60
              periodSeconds: 60
      restartPolicy: Always
      tolerations:
        - key: "type"
          operator: "Equal"
          value: "site"
          effect: "NoSchedule"
#      affinity:
#        nodeaffinity:
#          requiredduringschedulingignoredduringexecution:
#            nodeselectorterms:
#            - matchexpressions:
#              - key: type
#                operator: in
#                values:
#                -  chall-node
---
apiVersion: v1
kind: Service
metadata:
  name: ctfd-2021-chall-xor-otp-service
  namespace: challs
  labels:
    ctfd.chall.service: ctfd-2021-chall-xor-otp-service
spec:
  selector:
    ctfd.chall.pod: ctfd-2021-xor-otp-pod
  type: ClusterIP
  ports:
  - name: 'http'
    port: 47400
    targetPort: 47400
