final/challenges/challenges.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-2022-chall-uccdi-deployment
  labels:
    ctfd.chall.deployment: ctfd-2022-chall-uccdi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      ctfd.chall.pod: ctfd-2022-uccdi-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        ctfd.chall.pod: ctfd-2022-uccdi-pod
    spec:
      containers:
      - image: doombringerazurai/chall-uccdi:1.0
        name: chall-uccdi
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "1Gi"
          requests:
            memory: "1Ki"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ctfd-2022-chall-uccdi-service
  labels:
    ctfd.chall.service: ctfd-2022-chall-uccdi-service
spec:
  selector:
    ctfd.chall.pod: ctfd-2022-uccdi-pod
  type: LoadBalancer
  ports:
  - name: 'http'
    port: 80
    targetPort: 80
    nodePort: 30001
status:
  loadBalancer: {}
